--- a/DemoAirApp/src/views/CreatePostScreen.mxml
+++ b/DemoAirApp/src/views/CreatePostScreen.mxml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark">
+<s:View xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
+        xmlns:components="components.*">
 
     <s:titleContent><s:Label>Create Post</s:Label></s:titleContent>
     <s:navigationContent><s:Button label="back" id="navButton" click="navButton_clickHandler(event)" /></s:navigationContent>
@@ -24,21 +25,24 @@
         </s:ConstraintLayout>
     </s:layout>
 
-    <s:Label text="Title" left="column1:0" right="column1:0" top="row1:10" />
-    <s:Label text="Text" left="column1:0" right="column1:0" top="row2:10"/>
+    <!--<s:Label text="Title" left="column1:0" right="column1:0" top="row1:10" />-->
+    <!--<s:Label text="Text" left="column1:0" right="column1:0" top="row2:10"/>-->
     <s:Label text="Publish" left="column1:0" right="column1:0" top="row3:15"/>
 
-    <s:TextInput id="titleInput" left="column2:0" right="column2:0" top="row1:0" bottom="row1:5"/>
-    <s:TextArea id="contenTextArea" left="column2:0" right="column2:0" top="row2:0" bottom="row2:5"/>
-    <s:ToggleSwitch id="publishToggleSwitch" left="column2:0" top="row3:0" />
+    <!--<s:TextInput id="titleInput" left="column2:0" right="column2:0" top="row1:0" bottom="row1:5"/>-->
+    <components:PlaceholderTextInput id="titleInput" placeHolder="title" left="column1:0" right="column2:0" top="row1:0" bottom="row1:5"/>
+    <components:PlaceholderTextArea id="contenTextArea" placeHolder="content" left="column1:0" right="column2:0" top="row2:0" bottom="row2:5"/>
+    <s:ToggleSwitch id="publishToggleSwitch" left="column2:0" top="row3:0" change="publishToggleSwitch_changeHandler(event)" />
     <s:Button id="submitButton" label="SUBMIT" left="column1:5" right="column2:5" top="row4:0"  bottom="row4:0" click="submitHandler(event)" />
 
 
     <fx:Script><![CDATA[
         private var post:Object;
+
         private function navButton_clickHandler(event:MouseEvent):void {
             navigator.popView();
         }
+
         override public function createReturnObject():Object {
             var returnedObject:Object = new Object();
             returnedObject.post = this.post;
@@ -46,12 +50,16 @@
         }
 
         private function submitHandler(event:MouseEvent):void {
-             post = {
-                title:titleInput.text,
-                content:contenTextArea.text,
-                publish:publishToggleSwitch.selected
+            post = {
+                title: titleInput.text,
+                content: contenTextArea.text,
+                publish: publishToggleSwitch.selected
             }
             navigator.popView();
+        }
+
+        private function publishToggleSwitch_changeHandler(event:Event):void {
+            trace('toggleSwitch changed');
         }
         ]]></fx:Script>
 </s:View>
