--- a/DemoAirApp/src/views/StartScreen.mxml
+++ b/DemoAirApp/src/views/StartScreen.mxml
@@ -15,6 +15,11 @@
         private var posts:ArrayCollection = new ArrayCollection();
 
         private function button1_clickHandler(event:MouseEvent):void {
+            trace('clickevent dispatched');
+            navigator.pushView(CreatePostScreen);
+        }
+        private function button1_tapHandler(event:TouchEvent):void {
+            trace('touchEvent dispatched');
             navigator.pushView(CreatePostScreen);
         }
 
@@ -36,5 +41,5 @@
         ]]></fx:Script>
 
     <s:List id="list" dataProvider="{posts}" width="100%" height="100%" labelField="title" change="list_clickHandler(event)"/>
-    <s:Button id="addPostButton"  label="Create Post" click="button1_clickHandler(event)" width="100%"/>
+    <s:Button id="addPostButton"  label="Create Post" touchTap="button1_tapHandler(event)" click="button1_clickHandler(event)" width="100%"/>
 </s:View>
