--- a/example/DemoAirApp/src/views/StartScreen.mxml
+++ b/example/DemoAirApp/src/views/StartScreen.mxml
@@ -14,13 +14,11 @@
         [Bindable(event='change')]
         private var posts:ArrayCollection = new ArrayCollection();
 
-        private function button1_clickHandler(event:MouseEvent):void {
-            trace('clickevent dispatched');
+        private function addPostButtonHandler(event:Event):void {
             navigator.pushView(CreatePostScreen);
         }
-        private function button1_tapHandler(event:TouchEvent):void {
-            trace('touchEvent dispatched');
-            navigator.pushView(CreatePostScreen);
+        private function gestureButtonHandler(event:Event):void {
+            navigator.pushView(GestureScreen);
         }
 
         private function list_clickHandler(event:IndexChangeEvent):void {
@@ -41,5 +39,6 @@
         ]]></fx:Script>
 
     <s:List id="list" dataProvider="{posts}" width="100%" height="100%" labelField="title" change="list_clickHandler(event)"/>
-    <s:Button id="addPostButton"  label="Create new post" touchTap="button1_tapHandler(event)" click="button1_clickHandler(event)" width="100%"/>
+    <s:Button id="addPostButton"  label="Create new post" touchTap="addPostButtonHandler(event)" click="addPostButtonHandler(event)" width="100%"/>
+    <s:Button id="gestureButton"  label="Test Gestures" touchTap="gestureButtonHandler(event)" click="gestureButtonHandler(event)" width="100%"/>
 </s:View>
